--- a/package.json
+++ b/package.json
@@ -4,10 +4,24 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "sass": "^1.14.1"
+    "sass": "^1.20.3"
   },
   "devDependencies": {
     "node-sass": "^4.9.3",
     "typescript": "^3.2.4"
-  }
+  },
+  "description": "Via Yarn\r > yarn global add parcel-bundler",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fraincs/parcel-starter.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/fraincs/parcel-starter/issues"
+  },
+  "homepage": "https://github.com/fraincs/parcel-starter#readme"
 }
